fixed gear icon on small devices

--- a/style.css
+++ b/style.css
@@ -186,34 +186,39 @@
   cursor: pointer;
   opacity: 0.8;
   position: fixed;
-  bottom: 23px;
-  right: 28px;
+  bottom: 2%;
+  right: 2%;
   width: 120px;
 }
 
 /* The popup form - hidden by default */
 .form-popup {
+  
   background-color: white;
-  border: 1px solid rgba(0,0,0,0.2);
+  border-radius: 12px;
   display: none;
   position: fixed;
-  bottom: 23px;
-  right: 15px;
+  bottom: 0;
+  right: 2%;
   z-index: 9;
 }
 
 /* Add styles to the form container */
 .form-container {
+  filter:drop-shadow(0px 4px 8px rgba(0, 0, 0, 0.25));
   max-width: 300px;
-  padding: 10px;
+  padding: 16px;
   background-color: white;
+  border-radius: 12px;
+
 }
 
 /* Full-width input fields */
 .form-container input[type=text] {
   width: 100%;
-  padding: 15px;
-  margin: 5px 0 22px 0;
+  padding: 16px;
+  margin: 8px 0 24px 0;
+  border-radius: 12px;
   background: #f1f1f1;
 }
 
@@ -221,6 +226,8 @@
 .form-container input[type=text]:focus {
   background-color: #ddd;
   outline: none;
+  border-radius: 12px;
+
 }
 
 /* Set a style for the submit/login button */
@@ -237,6 +244,8 @@
 /* Add a red background color to the cancel button */
 .form-container .cancel {
   background-color: black;
+  border-radius: 12px;
+
 }
 
 /* Add some hover effects to buttons */
